--- a/roles/home.prometheus-docker-node-exporter/tasks/main.yml
+++ b/roles/home.prometheus-docker-node-exporter/tasks/main.yml
@@ -8,9 +8,10 @@
         node_exporter:
           image: quay.io/prometheus/node-exporter:latest
           container_name: node_exporter
+          ports:
+            - 9100:9100
           command:
             - '--path.rootfs=/host'
-          network_mode: host
           pid: host
           restart: always
           volumes:
