--- a/roles/home.docker-registry/tasks/main.yml
+++ b/roles/home.docker-registry/tasks/main.yml
@@ -1,26 +1,24 @@
+
 - ansible.builtin.file:
     path: "{{ item }}"
     state: directory
     mode: '0755'
   loop: "{{ registry_configuration_directories }}"
 
-- name: Copy config file to remote
-  ansible.builtin.copy:
-    src: config.yml
+- name: Template a file to /config/temp.yml
+  ansible.builtin.template:
+    src: ./templates/config.j2
     dest: "{{ docker_registry_config_dir }}/temp.yml"
 
-- name: Add block section to target file
-  when: docker_registry_proxy_enabled
-  blockinfile:
-    path: "{{ docker_registry_config_dir }}/temp.yml"
-    insertafter: EOF
-    marker: "# {mark} ANSIBLE MANAGED SECTION"
-    block: |
-      proxy:
-        remoteurl: https://registry-1.docker.io
-        username: {{ docker_hub_username }}
-        password: {{ docker_hub_password }}
-
+- name: Setup registry user
+  register: password
+  when: not docker_registry_proxy_enabled
+  community.general.htpasswd:
+    path: "{{ docker_registry_config_dir }}/htpasswd"
+    name: "{{ docker_registry_username }}"
+    password: "{{ docker_registry_password }}"
+    crypt_scheme: bcrypt
+      
 - name: Replace existing config
   ansible.builtin.copy:
     remote_src: true
@@ -33,7 +31,7 @@
     state: absent
 
 - community.docker.docker_compose:
-    project_name: "{{ 'registry' if docker_registry_proxy_enabled else 'registry_mirror'}}"
+    project_name: "{{ docker_registry_project_name }}"
     
     definition:
       version: '3.1'
@@ -41,27 +39,25 @@
         registry_mirror:
           restart: always
           image: registry:2
-          container_name:  "registry{{ '_mirror' if docker_registry_proxy_enabled else '' }}"  
+          container_name:  "registry{{container_suffix}}"  
           ports:
             - "{{docker_registry_port}}:5000"
-          volumes:
-            - '{{ docker_registry_storage_dir }}:/var/lib/registry'
-            - '{{ docker_registry_config_dir }}/config.yml:/etc/docker/registry/config.yml'
+          volumes: "{{ docker_registry_default_volume_mounts + ([] if docker_registry_proxy_enabled else docker_registry_auth_mount ) }}"
 
         registry_mirror_ui:
           restart: always
           image: joxit/docker-registry-ui:latest
-          container_name:  "registry_ui{{ '_mirror' if docker_registry_proxy_enabled else '' }}"  
+          container_name:  "registry_ui{{container_suffix}}"  
           ports:
             - "{{docker_registry_ui_port}}:80"
           environment:
             REGISTRY_TITLE: "{{docker_registry_title}}"
             REGISTRY_URL: "{{docker_registry_host}}"
             SINGLE_REGISTRY: "true"
-            DELETE_IMAGES: "{{ 'false' if docker_registry_proxy_enabled else 'true'}}"
+            DELETE_IMAGES: "{{ (not docker_registry_proxy_enabled) | string }}"
 
-# - name: restart container
-#   docker_container:
-#     name: registry
-#     restart: true
-#   when: conf.changed 
+- name: restart container
+  docker_container:
+    name: registry
+    restart: true
+  when: conf.changed 
