--- a/playbooks/005_artifact_repositories.yml
+++ b/playbooks/005_artifact_repositories.yml
@@ -7,6 +7,7 @@
 
     # Second registry is used as a pull-through cache (unable to push images to a mirror)
     - role: home.docker-registry
+      docker_registry_host: "{{docker_registry_mirror_host}}"
       docker_registry_title: "{{docker_registry_mirror_title}}"
       docker_registry_config_dir: "{{docker_registry_mirror_config_dir}}"
       docker_registry_storage_dir: "{{docker_registry_mirror_storage_dir}}"
@@ -16,74 +17,74 @@
       docker_hub_username: "{{dockerHub.username}}"
       docker_hub_password: "{{dockerHub.password}}"
 
-- name: Setup Docker Registry as pull through cache
-  become: true
-  hosts: 
-    - bananapi
-    - rpi
-  roles:
-    - role: home.docker_daemon
-      ip_address: "{{ ansible_host }}"
+# - name: Setup Docker Registry as pull through cache
+#   become: true
+#   hosts: 
+#     - bananapi
+#     - rpi
+#   roles:
+#     - role: home.docker_daemon
+#       ip_address: "{{ ansible_host }}"
     
-- name: Setup NPM Registry on NAS 
-  hosts: room_of_requirement
-  roles:
-    - role: home.verdaccio
+# - name: Setup NPM Registry on NAS 
+#   hosts: room_of_requirement
+#   roles:
+#     - role: home.verdaccio
 
-- name: Get Verdaccio Token
-  hosts:
-    - room_of_requirement
-  tasks:
-    - name: Get Verdaccio Token
-      ansible.builtin.uri:
-        url: "{{verdaccio_public_proto}}://{{verdaccio_public_url}}/-/user/org.couchdb.user:{{verdaccio_user}}"
-        method: PUT
-        body_format: json
-        status_code:
-          - 201
-        user: "{{ verdaccio_user }}"
-        password: "{{ verdaccio_pw }}"
-        force_basic_auth: true
-        headers:
-          Content-Type: application/json
-        body: '{"name":"{{ verdaccio_user }}","password":"{{ verdaccio_pw }}"}'
-        return_content: true
-      register: token_response
-    - name: Set Token
-      ansible.builtin.set_fact:
-        verdaccio_token: "{{(token_response.content | from_json).token }}"
-    - debug:
-        msg: "Response: {{verdaccio_token}}"
+# - name: Get Verdaccio Token
+#   hosts:
+#     - room_of_requirement
+#   tasks:
+#     - name: Get Verdaccio Token
+#       ansible.builtin.uri:
+#         url: "{{verdaccio_public_proto}}://{{verdaccio_public_url}}/-/user/org.couchdb.user:{{verdaccio_user}}"
+#         method: PUT
+#         body_format: json
+#         status_code:
+#           - 201
+#         user: "{{ verdaccio_user }}"
+#         password: "{{ verdaccio_pw }}"
+#         force_basic_auth: true
+#         headers:
+#           Content-Type: application/json
+#         body: '{"name":"{{ verdaccio_user }}","password":"{{ verdaccio_pw }}"}'
+#         return_content: true
+#       register: token_response
+#     - name: Set Token
+#       ansible.builtin.set_fact:
+#         verdaccio_token: "{{(token_response.content | from_json).token }}"
+#     - debug:
+#         msg: "Response: {{verdaccio_token}}"
         
-- name: Configure elder_wand to connect to registry
-  hosts: elder_wand
-  tasks:
-    - name: Ping host
-      win_ping: {}
+# - name: Configure elder_wand to connect to registry
+#   hosts: elder_wand
+#   tasks:
+#     - name: Ping host
+#       win_ping: {}
 
-    - name: Copy a single file
-      win_copy:
-        src: ./files/.npmrc
-        dest: C:\Users\pbabb\.npmrc
+#     - name: Copy a single file
+#       win_copy:
+#         src: ./files/.npmrc
+#         dest: C:\Users\pbabb\.npmrc
 
-    - name: Set an environment variable for machine (NPM_REGISTRY)
-      win_environment:
-        state: present
-        name: NPM_REGISTRY
-        value: "{{ verdaccio_public_url }}"
-        level: machine
+#     - name: Set an environment variable for machine (NPM_REGISTRY)
+#       win_environment:
+#         state: present
+#         name: NPM_REGISTRY
+#         value: "{{ verdaccio_public_url }}"
+#         level: machine
 
-    - name: Set an environment variable for machine (NPM_REGISTRY_PROTO)
-      win_environment:
-        state: present
-        name: NPM_REGISTRY_PROTO
-        value: "{{ verdaccio_public_proto }}"
-        level: machine
+#     - name: Set an environment variable for machine (NPM_REGISTRY_PROTO)
+#       win_environment:
+#         state: present
+#         name: NPM_REGISTRY_PROTO
+#         value: "{{ verdaccio_public_proto }}"
+#         level: machine
 
-    - name: Set an environment variable for machine (NPM_TOKEN)
-      win_environment:
-        state: present
-        name: NPM_TOKEN
-        value: "{{ hostvars['room_of_requirement'].verdaccio_token }}"
-        level: machine
+#     - name: Set an environment variable for machine (NPM_TOKEN)
+#       win_environment:
+#         state: present
+#         name: NPM_TOKEN
+#         value: "{{ hostvars['room_of_requirement'].verdaccio_token }}"
+#         level: machine
 
