--- a/main.yml
+++ b/main.yml
@@ -3,8 +3,8 @@
 # - import_playbook: ./playbooks/001_docker.yml
 # - import_playbook: ./playbooks/002_host_installs.yml
 # - import_playbook: ./playbooks/003_dns.yml
-# - import_playbook: ./playbooks/004_reverse_proxy.yml
-# - import_playbook: ./playbooks/005_artifact_repositories.yml
+- import_playbook: ./playbooks/004_reverse_proxy.yml
+- import_playbook: ./playbooks/005_artifact_repositories.yml
 # - import_playbook: ./playbooks/006_ci_cd.yml
 # - import_playbook: ./playbooks/007_docker_apps.yml
 # - import_playbook: ./playbooks/008_backups.yml
