--- a/roles/home.drone-server/tasks/main.yml
+++ b/roles/home.drone-server/tasks/main.yml
@@ -13,12 +13,14 @@
           container_name: drone
           image: drone/drone:2
           environment:
+            
             DRONE_GITHUB_CLIENT_ID: "{{ drone.github_client_id }}"
             DRONE_GITHUB_CLIENT_SECRET: "{{ drone.github_client_secret }}"
             DRONE_RPC_SECRET: "{{ drone.shared_secret }}"
             DRONE_SERVER_HOST: "{{ drone_server_host }}"
             DRONE_SERVER_PROTO: https
             DRONE_USER_FILTER: "{{ drone_user_filter }}"
+            DRONE_USER_CREATE: "username:{{drone_admin}},admin:true"
           volumes:
             - "{{ drone_data_dir}}:/data"
           restart: unless-stopped
