Setup grafana loki with better docker_daemon mgmt

--- a/host_vars/room_of_requirement.yml
+++ b/host_vars/room_of_requirement.yml
@@ -2,6 +2,7 @@ host_puid: "1000"
 host_pgid: "100"
 
 pip_install_packages:
+  - pyyaml==5.3.1 
   - docker
   - docker-compose
   - passlib
@@ -24,3 +25,7 @@ handbrake_config_dir: /volume1/Docker/handbrake/config
 handbrake_storage_dir: /volume1/home/pabbott
 handbrake_watch_dir: "/volume1/Video Editing/GameCaptures/Raw"
 handbrake_output_dir: "/volume1/Video Editing/GameCaptures/Converted"
+
+loki_config_dir:  /volume1/Docker/loki/config
+promtail_config_dir: /volume1/Docker/promtail/config
+grafana_data_dir: /volume1/Docker/grafana/data
