Ensure other hosts can set docker daemon registry mirror correctly

--- a/host_vars/bananapi.yml
+++ b/host_vars/bananapi.yml
@@ -12,3 +12,5 @@ traefik_config_dir: /home/pi/app_config/traefik
 traefik_dynamic_config_dir: /home/pi/app_config/traefik/conf.d
 
 pihole_config_dir: /home/pi/app_config/pihole
+
+docker_daemon_registry_mirror: https://registry-mirror.nas.local.abbottland.io
