--- a/host_vars/localhost.yml
+++ b/host_vars/localhost.yml
@@ -30,3 +30,5 @@ shell_config_ssh_targets:
   - shortcut: elderwand
     username: "{{ hostvars.elder_wand.ansible_user }}"
     hostname: "{{ hostvars.elder_wand.ansible_host }}"
+
+docker_daemon_registry_mirror: https://registry-mirror.nas.local.abbottland.io
