setup grafana and loki with traefik

--- a/playbooks/004_reverse_proxy.yml
+++ b/playbooks/004_reverse_proxy.yml
@@ -22,6 +22,8 @@
       - registry.nas.local.yml
       - handbrake.nas.local.yml
       - verdaccio.nas.local.yml
+      - grafana.nas.local.yml
+      - loki.nas.local.yml
 
   tasks:
     - name: "Copy traefik config {{item}} to remote"
