Setup vector and promtail

--- a/host_vars/bananapi.yml
+++ b/host_vars/bananapi.yml
@@ -14,3 +14,6 @@ traefik_dynamic_config_dir: /home/pi/app_config/traefik/conf.d
 pihole_config_dir: /home/pi/app_config/pihole
 
 docker_daemon_registry_mirror: https://registry-mirror.nas.local.abbottland.io
+
+vector_config_directory: /home/pi/app_config/vector
+vector_loki_host: https://loki.nas.local.abbottland.io
