--- a/host_vars/room_of_requirement.yml
+++ b/host_vars/room_of_requirement.yml
@@ -28,4 +28,5 @@ handbrake_output_dir: "/volume1/Video Editing/GameCaptures/Converted"
 
 loki_config_dir:  /volume1/Docker/loki/config
 promtail_config_dir: /volume1/Docker/promtail/config
+promtail_container_log_dir: /volume1/.@plugins/AppCentral/docker-ce/docker_lib/containers
 grafana_data_dir: /volume1/Docker/grafana/data
