--- a/roles/home.grafana-loki/tasks/main.yml
+++ b/roles/home.grafana-loki/tasks/main.yml
@@ -30,7 +30,6 @@
 
 - community.docker.docker_compose:
     project_name: grafana_loki
-    
     definition:
       version: "3.1"
       networks:
@@ -54,8 +53,11 @@
           command: -config.file=/etc/promtail/promtail-config.yml
           volumes:
             - "{{ promtail_config_dir }}:/etc/promtail"
+            - "{{ promtail_container_log_dir }}:/var/lib/docker/containers"
           networks:
             - loki
+          ports:
+            - "1514:1514"
         grafana:
           image: grafana/grafana-enterprise:latest
           container_name: grafana
