Extract a few roles out into docker collection

--- a/ansible_collections/abbottland/docker/roles/docker/tasks/main.yml
+++ b/ansible_collections/abbottland/docker/roles/docker/tasks/main.yml
@@ -16,7 +16,7 @@
     url: https://download.docker.com/linux/debian/gpg
 
 - name: Get DEB architecture
-  shell: dpkg --print-architecture
+  ansible.builtin.command: dpkg --print-architecture
   register: deb_architecture
 
 - name: Add Docker APT repository
