--- a/ansible_collections/abbottland/docker/roles/docker_permissions/meta/main.yml
+++ b/ansible_collections/abbottland/docker/roles/docker_permissions/meta/main.yml
@@ -3,4 +3,5 @@
 galaxy_info:
   author: Brandon Abbott
   description: Ensure user can run docker commands
-  
+  license: GPL-3.0-or-later
+  min_ansible_version: ">=2.10"
