--- a/main.yml
+++ b/main.yml
@@ -1,6 +1,6 @@
       
 # Docker needs to be installed before pip installs on host
-# - import_playbook: ./playbooks/001_docker.yml
+- import_playbook: ./playbooks/001_docker.yml
 # - import_playbook: ./playbooks/002_host_installs.yml
 # - import_playbook: ./playbooks/003_dns.yml
 # - import_playbook: ./playbooks/004_reverse_proxy.yml
@@ -9,4 +9,4 @@
 # - import_playbook: ./playbooks/007_docker_apps.yml
 # - import_playbook: ./playbooks/008_backups.yml
 # - import_playbook: ./playbooks/009_development.yml
-- import_playbook: ./playbooks/010_monitoring.yml
+# - import_playbook: ./playbooks/010_monitoring.yml
