--- a/ansible_collections/abbottland/core/roles/pip/meta/main.yml
+++ b/ansible_collections/abbottland/core/roles/pip/meta/main.yml
@@ -1,4 +1,5 @@
 galaxy_info:
   author: Brandon Abbott
   description: Installs an array of pip packages
-  
+  license: GPL-3.0-or-later
+  min_ansible_version: ">=2.10"
