--- a/host_vars/rpi.yml
+++ b/host_vars/rpi.yml
@@ -4,6 +4,10 @@ host_pgid: "1000"
 dns_nameservers:
   - "192.168.4.144"
 
+apt_install_packages:
+  - python3-pip
+  - dnsutils
+
 pip_install_packages:
   - docker
   - docker-compose
@@ -43,3 +47,4 @@ docker_daemon_registry_mirror: https://registry-mirror.nas.local.abbottland.io
 
 vector_config_directory: /home/pi/app_config/vector
 vector_loki_host: https://loki.nas.local.abbottland.io
+
