--- a/playbooks/002_host_installs.yml
+++ b/playbooks/002_host_installs.yml
@@ -1,41 +1,23 @@
-# TODO: remove this once backup service is complete.
-# azure cli needs to be installed before pip packages
-- name: Install azure cli
-  hosts: rpi
-  become: true
-  roles:
-    - role: home.az.cli
+# ---
+# - name: Install apt packages
+#   hosts:
+#     - rpi
+#     - bananapi
+#   become: true
+#   roles:
+#     - abbottland.core.apt
 
-- name: Install python, and pip and apt packages on target hosts (executes as root)
-  hosts:
-    - rpi
-    - bananapi
-  pre_tasks:
-    - name: Update apt and install pip packages
-      become: true
-      block:
-        - name: Update Apt
-          ansible.builtin.apt:
-            upgrade: true
-            update_cache: true
-        - name: Install Python3 pip and dns dnsutils
-          ansible.builtin.apt:
-            name:
-              - python3-pip
-              - dnsutils
-            update_cache: true
-  roles:
-    - role: home.pip
-      become: true
-    - role: cloudalchemy.node_exporter
+# - name: Install pip packages
+#   hosts:
+#     - rpi
+#     - bananapi
+#     - room_of_requirement
+#   roles:
+#     - role: abbottland.core.pip
+#       become: true
 
-- name: Pip Installs on NAS
-  hosts: room_of_requirement
-  roles:
-    - role: home.pip
-      become: true
-
-- name: Install node.js on elder_wand
+# TODO: This is for home-file-service only
+- name: Install node-windows globally on elder_wand
   hosts: elder_wand
   tasks:
     - name: Install node-windows
