--- a/roles/home.docker-registry/tasks/argument_specs.yml
+++ b/roles/home.docker-registry/tasks/argument_specs.yml
@@ -26,7 +26,7 @@ argument_specs:
         description: "Username of who can access this regisry"
         required: true
       docker_registry_password:
-        type: 'str':
+        type: 'str'
         description: "Password for provided username"
         required: true
       docker_hub_username:
