--- a/playbooks/004_reverse_proxy.yml
+++ b/playbooks/004_reverse_proxy.yml
@@ -5,7 +5,7 @@
 - name: DDNS and Traefik Installation on Banana PI via Docker (not root)
   hosts: bananapi
   roles:
-    - role: home.cloudflare-ddns
+    - role: abbottland.dns.cloudflare-ddns
     - role: home.traefik
   vars:
     traefik_files:
