Organize a few of the playbooks into base_app_infra

--- a/playbooks/base_app_infra/002_host_installs.yml
+++ b/playbooks/base_app_infra/002_host_installs.yml
@@ -16,7 +16,7 @@
     - role: abbottland.core.pip
       become: true
 
-# TODO: This is for home-file-service only
+# TODO: Extract this out as its for home-file-service only
 - name: Install node-windows globally on elder_wand
   hosts: elder_wand
   tasks:
